--- a/templates/scr/base.html
+++ b/templates/scr/base.html
@@ -14,7 +14,7 @@
    <meta name="description" content="">
    <meta name="author" content="">
    <!-- Site Icons -->
-   <link rel="icon" href="{% static 'favicon.ico' %}" type="image/ico">
+   <link rel="icon" href="{% static 'images/favicon.ico' %}">
    <!-- <link rel="apple-touch-icon" href="#" /> -->
    <!-- Bootstrap CSS -->
    <!-- <link rel="stylesheet" type="text/css" href="{% static 'css/bootstrap.min.css' %}" /> -->
