--- a/templates/scr/base.html
+++ b/templates/scr/base.html
@@ -9,7 +9,7 @@
    <!-- Mobile Metas -->
    <meta name="viewport" content="width=device-width, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
    <!-- Site Metas -->
-   <title>Digital Marketing - Responsive HTML5 Template</title>
+   <title>Restaurant-Media-Scraping</title>
    <meta name="keywords" content="">
    <meta name="description" content="">
    <meta name="author" content="">
@@ -17,15 +17,15 @@
    <link rel="icon" href="{% static 'favicon.ico' %}">
    <!-- <link rel="apple-touch-icon" href="#" /> -->
    <!-- Bootstrap CSS -->
-   <!-- <link rel="stylesheet" type="text/css" href="{% static 'css/bootstrap.min.css' %}" /> -->
+   <link rel="stylesheet" type="text/css" href="{% static 'css/bootstrap.min.css' %}" />
    <!-- Pogo Slider CSS -->
-   <!-- <link rel="stylesheet" type="text/css" href="{% static 'css/pogo-slider.min.css' %}" /> -->
+   <link rel="stylesheet" type="text/css" href="{% static 'css/pogo-slider.min.css' %}" />
    <!-- Site CSS -->
-   <!-- <link rel="stylesheet" type="text/css" href="{% static 'css/style.css' %}" /> -->
+   <link rel="stylesheet" type="text/css" href="{% static 'css/style.css' %}" />
    <!-- Responsive CSS -->
-   <!-- <link rel="stylesheet" type="text/css" href="{% static 'css/responsive.css' %}" /> -->
+   <link rel="stylesheet" type="text/css" href="{% static 'css/responsive.css' %}" />
    <!-- Custom CSS -->
-   <!-- <link rel="stylesheet" type="text/css" href="{% static 'css/custom.css' %}" /> -->
+   <link rel="stylesheet" type="text/css" href="{% static 'css/custom.css' %}" />
    <!--[if lt IE 9]>
       <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
       <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
