--- a/templates/scr/base.html
+++ b/templates/scr/base.html
@@ -64,8 +64,8 @@
                      </div>
                   </div>
                   <div class="col-sm-6">
-                     <!-- <button type="button" id="sidebarCollapse" class="btn btn-info navbar-btn">
-                        <img src="{% static "images/menu_icon.png" %}"></button> -->
+                     <button type="button" id="sidebarCollapse" class="btn btn-info navbar-btn">
+                        <img src="{% static "images/menu_icon.png" %}"></button>
                   </div>
                </div>
             </div>
@@ -157,11 +157,11 @@
 
          <a href="#" id="scroll-to-top" class="hvr-radial-out"><i class="fa fa-angle-up"></i></a>
          <!-- ALL JS FILES -->
-         <!-- <script type="text/javascript" src="{% static 'js/jquery.min.js' %}"></script>
+         <script type="text/javascript" src="{% static 'js/jquery.min.js' %}"></script>
          <script type="text/javascript" src="{% static 'js/popper.min.js' %}"></script>
-         <script type="text/javascript" src="{% static 'js/bootstrap.min.js' %}"></script> -->
+         <script type="text/javascript" src="{% static 'js/bootstrap.min.js' %}"></script>
          <!-- ALL PLUGINS -->
-         <!-- <script type="text/javascript" src="{% static "js/jquery.magnific-popup.min.js" %}"></script>
+         <script type="text/javascript" src="{% static "js/jquery.magnific-popup.min.js" %}"></script>
          <script type="text/javascript" src="{% static "js/jquery.pogo-slider.min.js" %}"></script>
          <script type="text/javascript" src="{% static "js/slider-index.js" %}"></script>
          <script type="text/javascript" src="{% static "js/smoothscroll.js" %}"></script>
@@ -169,7 +169,7 @@
          <script type="text/javascript" src="{% static "js/contact-form-script.js" %}"></script>
          <script type="text/javascript" src="{% static "js/isotope.min.js" %}"></script>
          <script type="text/javascript" src="{% static "js/images-loded.min.js" %}"></script>
-         <script type="text/javascript" src="{% static "js/custom.js" %}"></script> -->
+         <script type="text/javascript" src="{% static "js/custom.js" %}"></script>
          <!-- End Google Map -->
          <!-- <script>
          $(document).ready(function() {
