--- a/templates/scr/base.html
+++ b/templates/scr/base.html
@@ -112,7 +112,7 @@
                      </div>
                   </div>
                   <div class="col-xs-6 col-sm-6 col-md-6 col-lg-3">
-                     <a href="{% url 'grg_gn_sp:garage' %}">
+                     <a href="{% url 'grg:garage_page' %}">
                         <div class="full feature_box">
                            <div class="full icon">
                               <!-- <img class="default-block" src="{% static "images/icon_3.png" %}" alt="#" /> -->
