--- a/templates/scr/garage.html
+++ b/templates/scr/garage.html
@@ -17,7 +17,7 @@
         </div>
         <div class="row">
             <div class="col-xs-6 col-sm-6 col-md-6 col-lg-3">
-                <a href="{% url 'grg_gn_sp:grg_gn_sp' %}">
+                <a href="{% url 'grg:grg_gn_sp' %}">
                     <div class="full feature_box">
                         <div class="full icon">
                             <!-- <img class="default-block" src="{% static "images/icon_1.png" %}" alt="#" /> -->
@@ -32,6 +32,8 @@
                 </a>
             </div>
             <div class="col-xs-6 col-sm-6 col-md-6 col-lg-3">
+                <a href="{% url 'grg:grg_hp_sp' %}">
+
                 <div class="full feature_box">
                     <div class="full icon">
                         <!-- <img class="default-block" src="{% static "images/icon_2.png" %}" alt="#" /> -->
@@ -43,6 +45,7 @@
                     <div class="full">
                     </div>
                 </div>
+                </a>
             </div>
             <div class="col-xs-6 col-sm-6 col-md-6 col-lg-3">
                 <div class="full feature_box">
