test downloading images

--- a/templates/scr/garage.html
+++ b/templates/scr/garage.html
@@ -34,17 +34,17 @@
             <div class="col-xs-6 col-sm-6 col-md-6 col-lg-3">
                 <a href="{% url 'grg:grg_hp_sp' %}">
 
-                <div class="full feature_box">
-                    <div class="full icon">
-                        <!-- <img class="default-block" src="{% static "images/icon_2.png" %}" alt="#" /> -->
-                        <!-- <img class="default-none" src="{% static "images/icon_2w.png" %}" alt="#" /> -->
+                    <div class="full feature_box">
+                        <div class="full icon">
+                            <!-- <img class="default-block" src="{% static "images/icon_2.png" %}" alt="#" /> -->
+                            <!-- <img class="default-none" src="{% static "images/icon_2w.png" %}" alt="#" /> -->
+                        </div>
+                        <div class="full">
+                            <h4>HotPepper</h4>
+                        </div>
+                        <div class="full">
+                        </div>
                     </div>
-                    <div class="full">
-                        <h4>HotPepper</h4>
-                    </div>
-                    <div class="full">
-                    </div>
-                </div>
                 </a>
             </div>
             <div class="col-xs-6 col-sm-6 col-md-6 col-lg-3">
@@ -53,9 +53,11 @@
                         <!-- <img class="default-block" src="{% static "images/icon_3.png" %}" alt="#" /> -->
                         <!-- <img class="default-none" src="{% static "images/icon_3w.png" %}" alt="#" /> -->
                     </div>
-                    <div class="full">
-                        <h4>食べログ</h4>
-                    </div>
+                    <a href="/static/images/blog4.jpg" download>
+                        <div class="full">
+                            <h4>食べログ</h4>
+                        </div>
+                    </a>
                     <div class="full">
                     </div>
                 </div>
