--- a/templates/scr/garage.html
+++ b/templates/scr/garage.html
@@ -53,7 +53,7 @@
                         <!-- <img class="default-block" src="{% static "images/icon_3.png" %}" alt="#" /> -->
                         <!-- <img class="default-none" src="{% static "images/icon_3w.png" %}" alt="#" /> -->
                     </div>
-                    <a href="/static/images/blog4.jpg" download>
+                    <a href="/temp/result.png" download>
                         <div class="full">
                             <h4>食べログ</h4>
                         </div>
