--- a/templates/scr/garage.html
+++ b/templates/scr/garage.html
@@ -53,7 +53,7 @@
                         <!-- <img class="default-block" src="{% static "images/icon_3.png" %}" alt="#" /> -->
                         <!-- <img class="default-none" src="{% static "images/icon_3w.png" %}" alt="#" /> -->
                     </div>
-                    <a href="/temp/result.png" download>
+                    <a href="/app/temp/result.png" download>
                         <div class="full">
                             <h4>食べログ</h4>
                         </div>
@@ -62,6 +62,7 @@
                     </div>
                 </div>
             </div>
+            <a href="/static/images/blog3.jpg" download="">いめーじ</a>
         </div>
     </div>
 </div>
