--- a/templates/scr/garage.html
+++ b/templates/scr/garage.html
@@ -2,6 +2,27 @@
 {% load static %}
 
 
+{% block head %}
+<header class="top-header">
+    <div class="container">
+        <div class="row">
+            <div class="col-sm-6">
+                <div class="logo_main">
+                    <h2>
+                        <a href="{% url 'scraping:index' %}">店舗選択へ</a>
+                    </h2>
+                </div>
+            </div>
+            <div class="col-sm-6">
+                <button type="button" id="sidebarCollapse" class="btn btn-info navbar-btn">
+                    <img src="{% static "images/menu_icon.png" %}"></button>
+            </div>
+        </div>
+    </div>
+</header>
+
+{% endblock head %}
+
 {% block content %}
 
 <div class="section about_section layout_padding dash_bg">
@@ -17,7 +38,7 @@
         </div>
         <div class="row">
             <div class="col-xs-6 col-sm-6 col-md-6 col-lg-3">
-                <a href="{% url 'grg:grg_gn_sp' %}">
+                <a href="{% url 'scraping:grg_gn_sp' %}">
                     <div class="full feature_box">
                         <div class="full icon">
                             <!-- <img class="default-block" src="{% static "images/icon_1.png" %}" alt="#" /> -->
@@ -32,8 +53,7 @@
                 </a>
             </div>
             <div class="col-xs-6 col-sm-6 col-md-6 col-lg-3">
-                <a href="{% url 'grg:grg_hp_sp' %}">
-
+                <a href="{% url 'scraping:grg_hp_sp' %}">
                     <div class="full feature_box">
                         <div class="full icon">
                             <!-- <img class="default-block" src="{% static "images/icon_2.png" %}" alt="#" /> -->
@@ -48,21 +68,21 @@
                 </a>
             </div>
             <div class="col-xs-6 col-sm-6 col-md-6 col-lg-3">
-                <div class="full feature_box">
-                    <div class="full icon">
-                        <!-- <img class="default-block" src="{% static "images/icon_3.png" %}" alt="#" /> -->
-                        <!-- <img class="default-none" src="{% static "images/icon_3w.png" %}" alt="#" /> -->
-                    </div>
-                    <a href="/static/images/result.png" download>
+                <a href="{% url 'scraping:grg_tb_sp' %}">
+                    <div class="full feature_box">
+                        <div class="full icon">
+                            <!-- <img class="default-block" src="{% static "images/icon_3.png" %}" alt="#" /> -->
+                            <!-- <img class="default-none" src="{% static "images/icon_3w.png" %}" alt="#" /> -->
+                        </div>
                         <div class="full">
                             <h4>食べログ</h4>
                         </div>
-                    </a>
-                    <div class="full">
+                        <div class="full">
+                        </div>
                     </div>
-                </div>
+                </a>
             </div>
-            <a href="/static/images/blog3.jpg" download="">いめーじ</a>
+            <a href="/static/images/blog4.jpg" download="">いめーじ</a>
         </div>
     </div>
 </div>
