--- a/templates/scr/fes.html
+++ b/templates/scr/fes.html
@@ -38,7 +38,7 @@
         </div>
         <div class="row">
             <div class="col-xs-6 col-sm-6 col-md-6 col-lg-3">
-                <a href="{% url 'scraping:grg_gn_sp' %}">
+                <a href="{% url 'scraping:fes_gn_sp' %}">
                     <div class="full feature_box">
                         <div class="full icon">
                             <!-- <img class="default-block" src="{% static "images/icon_1.png" %}" alt="#" /> -->
@@ -53,7 +53,7 @@
                 </a>
             </div>
             <div class="col-xs-6 col-sm-6 col-md-6 col-lg-3">
-                <a href="{% url 'scraping:grg_hp_sp' %}">
+                <a href="{% url 'scraping:fes_hp_sp' %}">
                     <div class="full feature_box">
                         <div class="full icon">
                             <!-- <img class="default-block" src="{% static "images/icon_2.png" %}" alt="#" /> -->
@@ -68,7 +68,7 @@
                 </a>
             </div>
             <div class="col-xs-6 col-sm-6 col-md-6 col-lg-3">
-                <a href="{% url 'scraping:grg_tb_sp' %}">
+                <a href="{% url 'scraping:fes_tb_sp' %}">
                     <div class="full feature_box">
                         <div class="full icon">
                             <!-- <img class="default-block" src="{% static "images/icon_3.png" %}" alt="#" /> -->
