--- a/templates/scr/base.html
+++ b/templates/scr/base.html
@@ -27,7 +27,7 @@
    <!-- Custom CSS -->
    <link rel="stylesheet" type="text/css" href="{% static 'css/custom.css' %}" />
 </head>
-      
+
 <body id="about" class="inner_page" data-spy="scroll" data-target="#navbar-wd" data-offset="98">
    <!-- LOADER -->
    <!-- <div id="preloader">
@@ -56,7 +56,7 @@
                   <div class="col-sm-6">
                      <div class="logo_main">
                         <!-- <a href="index.html"> -->
-                           <h2>Web媒体データ取得</h2>
+                        <h2>Web媒体データ取得</h2>
                         <!-- </a> -->
                      </div>
                   </div>
@@ -89,30 +89,34 @@
                </div>
                <div class="row">
                   <div class="col-xs-6 col-sm-6 col-md-6 col-lg-3">
-                     <div class="full feature_box">
-                        <div class="full icon">
-                           <!-- <img class="default-block" src="{% static "images/icon_1.png" %}" alt="#" /> -->
-                           <!-- <img class="default-none" src="{% static "images/icon_1w.png" %}" alt="#" /> -->
+                     <a href="{% url 'scraping:fes_page' %}">
+                        <div class="full feature_box">
+                           <div class="full icon">
+                              <!-- <img class="default-block" src="{% static "images/icon_1.png" %}" alt="#" /> -->
+                              <!-- <img class="default-none" src="{% static "images/icon_1w.png" %}" alt="#" /> -->
+                           </div>
+                           <div class="full">
+                              <h4>Fes</h4>
+                           </div>
+                           <div class="full">
+                           </div>
                         </div>
-                        <div class="full">
-                           <h4>Fes</h4>
-                        </div>
-                        <div class="full">
-                        </div>
-                     </div>
+                     </a>
                   </div>
                   <div class="col-xs-6 col-sm-6 col-md-6 col-lg-3">
-                     <div class="full feature_box">
-                        <div class="full icon">
-                           <!-- <img class="default-block" src="{% static "images/icon_2.png" %}" alt="#" /> -->
-                           <!-- <img class="default-none" src="{% static "images/icon_2w.png" %}" alt="#" /> -->
+                     <a href="{% url 'scraping:wana_page' %}">
+                        <div class="full feature_box">
+                           <div class="full icon">
+                              <!-- <img class="default-block" src="{% static "images/icon_2.png" %}" alt="#" /> -->
+                              <!-- <img class="default-none" src="{% static "images/icon_2w.png" %}" alt="#" /> -->
+                           </div>
+                           <div class="full">
+                              <h4>罠　一目</h4>
+                           </div>
+                           <div class="full">
+                           </div>
                         </div>
-                        <div class="full">
-                           <h4>罠　一目</h4>
-                        </div>
-                        <div class="full">
-                        </div>
-                     </div>
+                     </a>
                   </div>
                   <div class="col-xs-6 col-sm-6 col-md-6 col-lg-3">
                      <a href="{% url 'scraping:garage_page' %}">
@@ -130,17 +134,19 @@
                      </a>
                   </div>
                   <div class="col-xs-6 col-sm-6 col-md-6 col-lg-3">
-                     <div class="full feature_box">
-                        <div class="full icon">
-                           <!-- <img class="default-block" src="{% static "images/icon_4.png" %}" alt="#" /> -->
-                           <!-- <img class="default-none" src="{% static "images/icon_4w.png" %}" alt="#" /> -->
+                     <a href="{% url 'scraping:toro_page' %}">
+                        <div class="full feature_box">
+                           <div class="full icon">
+                              <!-- <img class="default-block" src="{% static "images/icon_4.png" %}" alt="#" /> -->
+                              <!-- <img class="default-none" src="{% static "images/icon_4w.png" %}" alt="#" /> -->
+                           </div>
+                           <div class="full">
+                              <h4>灯籠</h4>
+                           </div>
+                           <div class="full">
+                           </div>
                         </div>
-                        <div class="full">
-                           <h4>灯籠</h4>
-                        </div>
-                        <div class="full">
-                        </div>
-                     </div>
+                     </a>
                   </div>
                </div>
             </div>
