--- a/templates/scr/garage.html
+++ b/templates/scr/garage.html
@@ -31,7 +31,7 @@
             <div class="col-md-12">
                 <div class="full">
                     <div class="heading_main text_align_center">
-                        <h2>媒体選択</h2>
+                        <h2>媒体選択  GARAGE</h2>
                     </div>
                 </div>
             </div>
