--- a/templates/scr/base.html
+++ b/templates/scr/base.html
@@ -26,6 +26,10 @@
    <link rel="stylesheet" type="text/css" href="{% static 'css/responsive.css' %}" />
    <!-- Custom CSS -->
    <link rel="stylesheet" type="text/css" href="{% static 'css/custom.css' %}" />
+   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.css">
+   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.0/jquery.min.js"></script>
+   <script src="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.js"></script>
+
 </head>
 
 <body id="about" class="inner_page" data-spy="scroll" data-target="#navbar-wd" data-offset="98">
@@ -189,5 +193,4 @@
          <!-- <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyA8eaHt9Dh5H57Zh0xVTqxVdBFCvFMqFjQ&callback=initMap"></script> -->
          <!-- end google map js -->
 </body>
-
 </html>
