--- a/templates/scr/fes.html
+++ b/templates/scr/fes.html
@@ -51,7 +51,7 @@
                     <div class="full">
                         <a href="{% url 'scraping:fes_gn_sp' %}">
 
-                        <h4>ぐるなび</h4>
+                            <h4>ぐるなび</h4>
                         </a>
                         <form action="{% url 'scraping:fes_gn_sp_get' %}" method="GET">
                             <input id="datepicker" type="text" name="q" value="年月選択">
@@ -73,7 +73,7 @@
                     <div class="full">
                         <a href="{% url 'scraping:fes_hp_sp' %}">
 
-                        <h4>HotPepper</h4>
+                            <h4>HotPepper</h4>
                         </a>
                         <form action="{% url 'scraping:fes_hp_sp_get' %}" method="GET">
                             <input id="datepicker2" type="text" name="q" value="年月選択">
@@ -88,19 +88,24 @@
             </div>
             <!-- <a href="{% url 'scraping:fes_hp_sp_get' %}">HPげっと</a> -->
             <div class="col-xs-6 col-sm-6 col-md-6 col-lg-3">
-                <a href="{% url 'scraping:fes_tb_sp' %}">
-                    <div class="full feature_box">
-                        <div class="full icon">
-                            <!-- <img class="default-block" src="{% static "images/icon_3.png" %}" alt="#" /> -->
-                            <!-- <img class="default-none" src="{% static "images/icon_3w.png" %}" alt="#" /> -->
-                        </div>
-                        <div class="full">
-                            <h4>食べログ</h4>
-                        </div>
-                        <div class="full">
-                        </div>
+                <div class="full feature_box">
+                    <div class="full icon">
+                        <!-- <img class="default-block" src="{% static "images/icon_3.png" %}" alt="#" /> -->
+                        <!-- <img class="default-none" src="{% static "images/icon_3w.png" %}" alt="#" /> -->
                     </div>
-                </a>
+                    <div class="full">
+                        <a href="{% url 'scraping:fes_tb_sp' %}">
+                            <h4>食べログ</h4>
+                        </a>
+                        <form action="{% url 'scraping:fes_tb_sp_get' %}" method="GET">
+                            <input id="datepicker3" type="text" name="q" value="年月選択">
+                            <input type="submit">
+                            <script src="{% static 'js/datepicker.js' %}"></script>
+                        </form>
+                    </div>
+                    <div class="full">
+                    </div>
+                </div>
             </div>
         </div>
     </div>
