--- a/templates/scr/base.html
+++ b/templates/scr/base.html
@@ -25,6 +25,7 @@
    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.0/jquery.min.js"></script>
    <script src="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.js"></script>
 
+   
 </head>
 
 
@@ -150,7 +151,8 @@
          <!-- end section -->
 
 
-         
+<a href="{% url 'scraping:admin' %}" class="function-btn3"><button>管理画面</button></a>
+
 </body>
 
 </html>
