base.html delete

--- a/templates/scr/fes.html
+++ b/templates/scr/fes.html
@@ -1,4 +1,4 @@
-{% extends 'scr/base.html' %}
+{% extends 'scr/index.html' %}
 {% load static %}
 
 
@@ -18,7 +18,7 @@
                 <p>{{fes_query}}</p>
                 {% endif %}
                 <button type="button" id="sidebarCollapse" class="btn btn-info navbar-btn">
-                    <img src="{% static "images/menu_icon.png" %}"></button>
+                    <img src="{% static " images/menu_icon.png" %}"></button>
             </div>
         </div>
     </div>
